fix(chapter01/hello-world): resolve FileNotFoundException